--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "firebase": "^9.8.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
+    "react-bootstrap-carousel": "^4.1.1",
+    "react-carousel-slider": "^2.0.13",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.1",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
