--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-carousel-slider": "^2.0.13",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-iframe": "^1.8.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.1",
